--- a/code-resolver-upload-server/src/main/resources/resources/upload.html
+++ b/code-resolver-upload-server/src/main/resources/resources/upload.html
@@ -136,14 +136,14 @@
                     <a class="form-control" style="margin-top: 10px; background-color: rgba(45,255,225,0.29)">
                         <span class="text-success text-center" style="font-size: 18px;">下载</span>
                     </a>
-                    <a class="form-control" href="/file/downloadFile?fileName=logo.png" style="margin-top: 10px; ">
+                    <a class="form-control" href="/file/downloadFile?fileName=1.png" style="margin-top: 10px; ">
                         <span class="text-warning " style="font-size: 16px;">下载logo.png</span>
                     </a>
                     <a class="form-control" style="margin-top: 10px; background-color: rgba(255,45,114,0.89)">
                         <span class="text-dark text-center" style="font-size: 18px;">下载</span>
                     </a>
                     <a class="form-control" href="/file/deleteFile?fileName=100.png" style="margin-top: 10px; ">
-                        <span class="text-danger " style="font-size: 16px;">删除100.png</span>
+                        <span class="text-danger " style="font-size: 16px;">删除文件</span>
                     </a>
                     <br/>
                     <br/>
